# PasteBoard

./: CMakeLists.txt  Client.cpp  Client.h  EntryWidget.cpp  EntryWidget.h  ImageLabel.cpp  ImageLabel.h  MainWidget.cpp  MainWidget.h  Setting.cpp  Setting.h  SystemTray.cpp  SystemTray.h  main.cpp  resource.qrc
